# fencecat

./: CHANGELOG.md  Cargo.toml  README.md
src/: clipboard.rs  lib.rs  main.rs
