[package]
name = "fencecat"
version = "0.2.0"
edition = "2024"
description = "Walkdir cat with markdown fenced code output"
keywords = ["markdown", "code-fence", "cli", "clipboard", "filesystem"]
categories = [
    "command-line-utilities",
    "filesystem",
    "development-tools",
    "text-processing",
    "value-formatting",
]
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/fencecat"
repository = "https://github.com/xangelix/fencecat"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.5.50", features = ["derive"] }
ignore = "0.4.24"
which = "8.0.0"
