[package]
name = "fencecat"
version = "0.2.2"
edition = "2024"
description = "Walkdir cat with markdown fenced code output"
keywords = ["markdown", "code-fence", "cli", "clipboard", "filesystem"]
categories = [
    "command-line-utilities",
    "filesystem",
    "development-tools",
    "text-processing",
    "value-formatting",
]
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/fencecat"
repository = "https://github.com/xangelix/fencecat"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
regex = { version = "1.12.2", default-features = false, features = [
    "std",
    "perf",
] }
which = "8.0.0"
